# genecad

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.arm64  GeneCAD.ipynb  README.md  makefile  predict.sh  pyproject.toml  run_busco.sh  train.sh
.cursor/rules/: cli.mdc  default.mdc  project.mdc  table.mdc
.github/badges/: hf-downloads.json
.github/workflows/: ci.yaml  docker-publish.yml  release.yml  test-triton-arm64.yml  update-hf-downloads-badge.yml
archive/: README.md
archive/pipelines/: evaluation
archive/scripts/: export_bw.py
docs/: alternative_installation_methods.md  create_manifest.md  detect_intervals.md  export_gff.md  extract.md  extract_fasta.md  filter_raw_gff.md  merge_gff.md  predict.md  refine.md  troubleshooting.md
examples/configs/: cluster.sky.yaml  task.sky.yaml
examples/scripts/: run_evaluation.sh
experiments/01_emarro_hnet/: merge_gff.py  predict_all_chroms.sh  predict_all_chroms_make.sh  predict_small_step.sh  submit_train.sh  train.sh  train_multispecies.sh
experiments/02_emarro_mlp/: predict_maize.sh  train.sh
experiments/03_emarro_ar/: predict.sh
pipelines/: evaluation  prediction  training
scripts/: compute_class_weights.py  consolidate.py  create_manifest.py  detect_intervals.py  embed.py  estimate_viterbi_transition_matrix.py  evaluate.py  evaluate_gff.py  export_bw.py  export_gff.py  extract.py  extract_fasta.py  extract_train.py  filter_raw_gff.py  gff.py  install_release.sh  merge_gff.py  patch_environment.py  predict.py  predict.sh  predict_and_visualize.py  predict_small_step.py  qc.py  refine.py  sample.py  summarize.py  sweep.py  train.py  train.sh  transform.py
scripts/misc/: analyze_binary_labels.py  analyze_canonical_vs_longest_transcripts.py  analyze_crf_refinements.py  analyze_prediction_codons.py  analyze_sequences.py  analyze_training_data.py  compute_feature_stats.py  download_synology_dir.py  encode_labels.py  (+15 more)
src/: __init__.py  analysis.py  cli.py  config.py  crf.py  dataset.py  decoding.py  dist.py  evaluate.py  evaluation.py  gff_compare.py  gff_eval.py  gff_pandas.py  gff_parser.py  gff_reader.py  hub.py  logging.py  merge_orfs.py  modeling.py  naming.py  portion.py  prediction.py  reelprotein.py  reelprotein_old.py  sampling.py  schema.py  sequence.py  ui.py  visualization.py
(+103 files in other folders)
